--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ repository = "https://github.com/shahinrostami/chord_rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ureq = "0.11.4"
+nanoid = "0.3.0"
