chore: Add repo url to cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 authors = ["Dr. Shahin Rostami <hello@shahinrostami.com>"]
 description = "Engaging visualisations, made easy."
 homepage = "https://plotapi.com"
+repository = "http://github.com/shahinrostami/plotapi_rs"
 license = "MIT"
 keywords = ["plot", "chart", "visualization"]
 
